feat: Terminos, privacidad y deatalle de servicios

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -22,8 +22,8 @@ const quickLinks = [
 ];
 
 const legalLinks = [
-  { name: 'Privacidad', url: '#' }, 
-  { name: 'Términos', url: '#' },
+  { name: 'Privacidad', url: '/privacidad' }, 
+  { name: 'Términos', url: '/terminos' },
 ];
 ---
 
