fix: se elimino la firma en la pagina de Nosotros

--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -70,9 +70,10 @@ const values = [
             </p>
           </div>
           
-          <div class="pt-4">
-            <img src="/images/signature.png" alt="Firma Fundador" class="h-12 opacity-60" /> {/* Opcional: firma decorativa */}
-          </div>
+          <!-- Descartado la firma -->
+          <!-- <div class="pt-4">
+            <img src="/images/firma-negra.png" alt="Firma Fundador" class="h-12 opacity-60" /> {/* Opcional: firma decorativa */}
+          </div> -->
         </div>
 
         {/* Imagen / Collage */}
